# vmlc-backend

./: .dockerignore  .example.env  .gitignore  404.html  ADR.md  ADR2.md  BROADCAST.md  CACHING_STRATEGY.md  CANDIDATE_ANALYSIS.md  CANDIDATE_DASHBOARD.md  CANDIDATE_DASHBOARD_API.md  CANDIDATE_RANKING_DETAIL.md  CANDIDATE_RECORDS.md  CHANGELOG.md  COMPETITION.md  COWRYWISE_KIDS.md  Dockerfile  EXAM_DETAILS.md  EXAM_DIRECT_ACCESS.md  EXAM_QUESTION_V2_STRATEGY.md  EXPORT_IMPORT_EXAM.md  HEARTBEAT.md  HEARTBEAT_CLIENT.md  HELPDESK_API.md  INTEGRITY_AUDIT.md  LEADERBOARD.md  LIVE_EXAM_API.md  Makefile  NOTIF_CANDIDATES.md  PERMISSIONS_ACCESS.md  PROCTORING.md  PROMOTION.md  PUBLISH_RANKING.md  QR_FINAL_BACKEND.md  QUESTIONS_API_SPEC.md  RANKING.md  README.md  SERVER_TIME.md  SMS_NOTIF.md  STAFF_COMPETION_DASHBOARD.md  (+56 more)
.github/workflows/: build-test-push.yml  deploy-docs.yml  deploy-prod.yml  deploy-staging.yml  deploy.yml
advanced/: index.html
advanced/error-handling/: index.html
advanced/rate-limiting/: index.html
advanced/versioning/: index.html
api/: __init__.py  admin.py  apps.py  index.html  models.py  permissions.py  serializers.py  signals.py  storage_backends.py  tasks.py  urls.py
api/health-status/: index.html
api/migrations/: 0001_initial.py  0002_alter_user_first_name_alter_user_last_name_and_more.py  0002_alter_userverification_options_alter_staff_role_and_more.py  0003_alter_user_phone.py  0003_alter_userverification_id_card_and_more.py  0004_alter_candidatescore_date_recorded_and_more.py  0004_candidatescoresnapshot.py  0004_userverification_is_rejected.py  0005_merge_20250803_1715.py  0006_userverification_and_more.py  0007_user_is_email_verified_emailotp.py  0014_alter_staff_user.py  0015_alter_candidate_user_alter_candidatescore_exam_and_more.py
api/models/: __init__.py  candidate.py  exam.py  feature_flag.py  leaderboard.py  question.py  score.py  staff.py  user.py
api/serializers/: __init__.py  answer.py  auth.py  candidate.py  exam.py  exam_result.py  question.py  registration.py  role.py  score.py  staff.py  user.py  verification.py
api/utils/: __init__.py  auth.py  dashboard_utils.py  helpers.py  query_filters.py  registration.py  user.py
api/views/: __init__.py  answer.py  answers.py  auth.py  candidate.py  dashboard.py  exam.py  health.py  leaderboard.py  question.py  registration.py  root.py  score.py  staff.py  user.py  verification.py
comms/: README.md  admin.py  apps.py  consumers.py  functions.py  middleware.py  models.py  routing.py  serializers.py  signals.py  tasks.py  test_consumers.py  test_notifications.py  test_support_chat.py  tests.py  urls.py  utils.py  views.py
comms/migrations/: 0001_initial.py  0002_broadcast_task_id_alter_broadcast_status.py  0003_notification.py  0004_broadcastlog_role_type_alter_broadcast_target_roles_and_more.py  0005_alter_broadcastlog_role_type.py  0006_backuplog.py  0007_alter_broadcast_created_by.py  0008_remove_notification_read_and_more.py  0009_alter_backuplog_options_alter_broadcast_options_and_more.py  0010_publicsupportrequest_alter_broadcast_options_and_more.py  0011_broadcast_sms_message.py  0011_remove_supportchatthread_assigned_staff_and_more.py  0012_add_publicsupportrequest_alter_broadcast_options_and_more.py  0012_helpdeskthread_snoozed_until_and_more.py
comms/services/: email.py  kudi_sms.py  notification.py  slack.py  ws_helpdesk_dashboard.py  ws_helpdesk_thread.py  ws_notification.py
comms/tests/: test_broadcast.py  test_consumers.py  test_exam_notifications.py  test_helpdesk.py  test_helpdesk_status.py  test_notifications.py  test_sms_robustness.py  test_support.py
competition/: admin.py  apps.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
competition/migrations/: 0001_initial.py  0002_standings_standingsentry_and_more.py  0003_aggregateleaderboard_aggregateleaderboardentry_and_more.py  0004_stageexam.py  0005_create_stage_exams_from_vmlc_exams.py  0006_competition_name.py  0007_remove_stageexam_unique_exam_per_stage_and_more.py  0008_alter_candidatecompetition_status_and_more.py  0009_remove_aggregateleaderboardentry_leaderboard_and_more.py  0010_remove_rankingsnapshot_unique_standings_per_exam_and_more.py  0011_alter_rankingsnapshotentry_exam_score.py  0012_alter_rankingsnapshot_options_and_more.py  0013_remove_rankingsnapshot_unique_ranking_per_exam.py  0014_alter_enrollment_status.py  0015_rankingsnapshotentry_time_used.py  0016_alter_enrollment_status.py  0017_rankingsnapshotentry_proctoring_status_and_more.py  0018_alter_rankingsnapshotentry_proctoring_status.py  0019_auto_20260314_0255.py  0020_alter_rankingsnapshotentry_exam_score.py  0021_rankingsnapshotentry_attempt_status.py  0024_alter_enrollment_metadata.py  (+2 more)
config/: README.md  asgi.py  celery.py  gunicorn.conf.py  otel.py  urls.py  workers.py  wsgi.py
core/: log_filters.py  pagination.py  settings.py  storage_backends.py  tasks.py  urls.py  views.py
db_backup/: index.html
docs/: API_SPEC.md  README.md  api-doc.md  api-documentation.md  api.md  conf.py  db_backup.md  index.md  index.rst  mkdocs.yml
getting-started/: index.html
grafana/: dashboards.yml  datasources.yml
identity/: admin.py  apps.py  middleware.py  models.py  permissions.py  signals.py  tasks.py  urls.py  validators.py  views.py
infra/: README.md  loki.yml  otel.yml  stack.base.yml  stack.prod.yml  stack.staging.yml
ops/: alloy.alloy  loki.yml  prometheus.yml  stack.base.yml  stack.prod.yml  stack.staging.yml
resources/: index.html
roles/: index.html
scripts/: README.md  backup-crontab.txt  backup.sh  build.sh  compose-build.sh  compose_up.sh  db-backup.sh  db-restore.sh  deploy.sh  deploy_identity_migration.py  entrypoint.sh  make-secrets.sh  normalize_names.py  rollback_candidate_attempt.py  runmigrations.sh  runserver.sh  setup_secrets.sh  start.sh  update-secret.sh
search/: search_index.json
vmlc/: README.md  VMLC_API.postman_collection.json  __init__.py  admin.py  apps.py  consumers.py  models.py  pagination.py  permissions.py  routing.py  signals.py  storage_backends.py  tasks.py  urls.py
(+305 files in other folders)
