[project]
name = "vmlc-backend"
version = "0.1.0"
description = "Backend service for the Verboheit Mathematics League Competiotion."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alabaster==1.0.0",
    "amqp==5.3.1",
    "asgiref==3.9.1",
    "astroid==3.3.10",
    "babel==2.17.0",
    "billiard==4.2.1",
    "black==25.1.0",
    "boto3==1.38.46",
    "botocore==1.38.46",
    "celery==5.5.3",
    "certifi==2025.7.14",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1.2",
    "click-repl==0.3.0",
    "colorama==0.4.6",
    "colorlog>=6.9.0",
    "cron-descriptor==1.4.5",
    "cryptography==45.0.7",
    "defusedxml==0.7.1",
    "dill==0.4.0",
    "dj-database-url==3.0.1",
    "django==5.2.6",
    "django-celery-beat==2.8.1",
    "django-celery-results==2.6.0",
    "django-cors-headers==4.7.0",
    "django-debug-toolbar==6.0.0",
    "django-extensions==4.1",
    "django-filter==25.1",
    "django-health-check==3.20.0",
    "django-redis==6.0.0",
    "django-storages==1.14.6",
    "django-timezone-field==7.1",
    "djangorestframework==3.16.1",
    "djangorestframework-api-key==3.1.0",
    "djangorestframework-simplejwt==5.5.1",
    "docutils==0.21.2",
    "drf-yasg==1.21.10",
    "flower==2.0.1",
    "graphviz==0.21",
    "gunicorn==23.0.0",
    "humanize==4.12.3",
    "idna==3.10",
    "imagesize==1.4.1",
    "inflection==0.5.1",
    "iniconfig==2.1.0",
    "isort==6.0.1",
    "jinja2==3.1.6",
    "jmespath==1.0.1",
    "kombu==5.5.4",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mccabe==0.7.0",
    "mdit-py-plugins==0.4.2",
    "mdurl==0.1.2",
    "mypy-extensions==1.1.0",
    "myst-parser==4.0.1",
    "oauthlib==3.3.1",
    "packaging==25.0",
    "pathspec==0.12.1",
    "pillow==11.3.0",
    "pip==25.2",
    "platformdirs==4.3.8",
    "pluggy==1.6.0",
    "prometheus-client==0.22.1",
    "prompt-toolkit==3.0.51",
    "psycopg==3.2.10",
    "psycopg-binary==3.2.10",
    "pycparser==2.22",
    "pydot==4.0.1",
    "pygments==2.19.2",
    "pyjwt==2.9.0",
    "pylint==3.3.8",
    "pylint-django==2.6.1",
    "pylint-plugin-utils==0.8.2",
    "pyparsing==3.2.3",
    "pytest==8.4.1",
    "pytest-django==4.11.1",
    "python-crontab==3.3.0",
    "python-dateutil==2.9.0.post0",
    "python-decouple==3.8",
    "python-dotenv==1.1.1",
    "python-json-logger>=3.3.0",
    "python-magic==0.4.27",
    "python3-openid==3.2.0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "redis==5.0.7",
    "requests==2.32.4",
    "requests-oauthlib==2.0.0",
    "roman-numerals-py==3.1.0",
    "s3transfer==0.13.0",
    "six==1.17.0",
    "snowballstemmer==3.0.1",
    "sphinx==8.2.3",
    "sphinx-rtd-theme==3.0.2",
    "sphinxcontrib-applehelp==2.0.0",
    "sphinxcontrib-devhelp==2.0.0",
    "sphinxcontrib-htmlhelp==2.1.0",
    "sphinxcontrib-jquery==4.1",
    "sphinxcontrib-jsmath==1.0.1",
    "sphinxcontrib-qthelp==2.0.0",
    "sphinxcontrib-serializinghtml==2.0.0",
    "sqlparse==0.5.3",
    "tomlkit==0.13.3",
    "tornado==6.5.1",
    "typing-extensions==4.14.1",
    "tzdata==2025.2",
    "uritemplate==4.2.0",
    "urllib3==2.5.0",
    "vine==5.1.0",
    "vulture==2.14",
    "wcwidth==0.2.13",
    "whitenoise==6.9.0",
]

[tool.pylint.main]
load-plugins = ["pylint_django"]
django-settings-module = "config.settings"
ignore = ["migrations"]
generated-members = ["Meta", "verification", "objects", "url"]

[tool.pylint.messages_control]
disable = [
    "missing-docstring",
    "invalid-name",
    "too-few-public-methods",
    "line-too-long",
    "abstract-method",
    "arguments-renamed",
    "raise-missing-from",
    "arguments-differ",
    "import-outside-toplevel",
    "logging-fstring-interpolation",
    "too-many-ancestors"
]

[tool.pylint.format]
max-line-length = 120

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py", "tests.py"]
addopts = ["--tb=short", "--cov=paystack", "--cov-report=term-missing"]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py312"]
