[project]
name = "vmlc-backend"
version = "0.3.0"
description = "Backend service for the Verboheit Mathematics League Competition."
readme = "README.md"
requires-python = ">=3.11"

# PRODUCTION DEPENDENCIES ONLY - These get installed in production
dependencies = [
    "aioboto3==15.1.0",
    "aiobotocore==2.24.0",
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.15",
    "aioitertools==0.12.0",
    "aiosignal==1.4.0",
    "amqp==5.3.1",
    "asgiref==3.9.1",
    "attrs==25.3.0",
    "billiard==4.2.1",
    "boto3==1.39.11",
    "botocore==1.39.11",
    "celery==5.5.3",
    "certifi==2025.7.14",
    "cffi==1.17.1",
    "channels==4.3.1",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1.2",
    "click-repl==0.3.0",
    "colorama==0.4.6",
    "colorlog==6.9.0",
    "cron-descriptor==1.4.5",
    "cryptography==45.0.7",
    "defusedxml==0.7.1",
    "dj-database-url==3.0.1",
    "django==5.2.6",
    "django-async-redis==0.2.0",
    "django-celery-beat==2.8.1",
    "django-celery-results==2.6.0",
    "django-cors-headers==4.7.0",
    "django-filter==25.1",
    "django-health-check==3.20.0",
    "django-prometheus==2.4.1",
    "django-redis==6.0.0",
    "django-storages==1.14.6",
    "django-timezone-field==7.1",
    "djangorestframework==3.16.1",
    "djangorestframework-api-key==3.1.0",
    "djangorestframework-simplejwt==5.5.1",
    "drf-yasg==1.21.10",
    "flower==2.0.1",
    "frozenlist==1.7.0",
    "gunicorn==23.0.0",
    "h11==0.16.0",
    "humanize==4.12.3",
    "idna==3.10",
    "inflection==0.5.1",
    "jinja2==3.1.6",
    "jmespath==1.0.1",
    "kombu==5.5.4",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "multidict==6.6.4",
    "oauthlib==3.3.1",
    "packaging==25.0",
    "pillow==11.3.0",
    "prometheus-client==0.22.1",
    "propcache==0.3.2",
    "psycopg[binary]==3.2.10",
    "pycparser==2.22",
    "pyjwt==2.9.0",
    "pyparsing==3.2.3",
    "python-crontab==3.3.0",
    "python-dateutil==2.9.0.post0",
    "python-decouple==3.8",
    "python-dotenv==1.1.1",
    "python-json-logger==3.3.0",
    "python-magic==0.4.27",
    "python3-openid==3.2.0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "redis==5.0.7",
    "requests==2.32.4",
    "requests-oauthlib==2.0.0",
    "rich==14.1.0",
    "roman-numerals-py==3.1.0",
    "s3transfer==0.13.0",
    "six==1.17.0",
    "sqlparse==0.5.3",
    "tornado==6.5.1",
    "typing-extensions==4.14.1",
    "tzdata==2025.2",
    "uritemplate==4.2.0",
    "urllib3==2.5.0",
    "uvicorn==0.35.0",
    "uvicorn-worker==0.3.0",
    "vine==5.1.0",
    "whitenoise==6.9.0",
    "wrapt==1.17.3",
    "xmltodict==1.0.2",
    "yarl==1.20.1",
]

# ---------------------------------------
# DEVELOPMENT DEPENDENCY GROUPS - Only installed in dev/test environments
# ---------------------------------------
[dependency-groups]
# Development tools - linters, formatters, type checkers
dev = [
    "bandit==1.8.6",
    "black==25.1.0",
    "isort==6.0.1",
    "mypy-extensions==1.1.0",
    "pylint==3.3.8",
    "pylint-django==2.6.1",
    "pylint-plugin-utils==0.8.2",
    "vulture==2.14",
    "django-debug-toolbar==6.0.0",
    "django-extensions==4.1",
    "astroid==3.3.10",
    "dill==0.4.0",
    "mccabe==0.7.0",
    "pathspec==0.12.1",
    "platformdirs==4.3.8",
    "stevedore==5.5.0",
    "tomlkit==0.13.3",
    "wcwidth==0.2.13",
]

# Testing tools
test = [
    "faker==37.8.0",
    "moto==5.1.12",
    "pluggy==1.6.0",
    "pytest==8.4.1",
    "pytest-django==4.11.1",
    "responses==0.25.8",
    "werkzeug==3.1.3",
    "iniconfig==2.1.0",
]

# Documentation generation
docs = [
    "sphinx==8.2.3",
    "sphinx-rtd-theme==3.0.2",
    "myst-parser==4.0.1",
    "graphviz==0.21",
    "alabaster==1.0.0",
    "babel==2.17.0",
    "docutils==0.21.2",
    "imagesize==1.4.1",
    "mdit-py-plugins==0.4.2",
    "pydot==4.0.1",
    "pygments==2.19.2",
    "snowballstemmer==3.0.1",
    "sphinxcontrib-applehelp==2.0.0",
    "sphinxcontrib-devhelp==2.0.0",
    "sphinxcontrib-htmlhelp==2.1.0",
    "sphinxcontrib-jquery==4.1",
    "sphinxcontrib-jsmath==1.0.1",
    "sphinxcontrib-qthelp==2.0.0",
    "sphinxcontrib-serializinghtml==2.0.0",
]

# Additional development utilities (optional - not included by default)
debug = [
    "prompt-toolkit==3.0.51",
    "pip==25.2",  # Usually available in most environments anyway
]

[tool.pylint.main]
load-plugins = ["pylint_django"]
django-settings-module = "config.settings"
ignore = ["migrations"]
generated-members = ["Meta", "verification", "objects", "url"]

[tool.pylint.messages_control]
disable = [
    "missing-docstring",
    "invalid-name",
    "too-few-public-methods",
    "line-too-long",
    "abstract-method",
    "arguments-renamed",
    "raise-missing-from",
    "arguments-differ",
    "import-outside-toplevel",
    "logging-fstring-interpolation",
    "too-many-ancestors"
]

[tool.pylint.format]
max-line-length = 120

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py", "tests.py"]
addopts = ["--tb=short", "--cov=paystack", "--cov-report=term-missing"]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py312"]