[project]
name = "vmlc-backend"
version = "0.3.2"
description = "Backend service for the Verboheit Mathematics League Competition."
readme = "README.md"
requires-python = ">=3.11"

# PRODUCTION DEPENDENCIES ONLY - These get installed in production
dependencies = [
    # Core Django & ASGI
    "django==5.2.6",
    "djangorestframework==3.16.1",
    "djangorestframework-simplejwt==5.5.1",
    "djangorestframework-api-key==3.1.0",
    "drf-yasg==1.21.10",
    "gunicorn==23.0.0",
    "uvicorn[standard]==0.35.0",
    "uvicorn-worker==0.3.0",
    "asgiref==3.9.1",
    # WebSockets & Channels
    "channels==4.3.1",
    "channels-redis==4.3.0",
    "djangochannelsrestframework==1.3.0",
    # Database
    "psycopg[binary]==3.2.10",
    "dj-database-url==3.0.1",
    # Caching & Task Queue
    "redis>=5.2.1",
    "django-redis>=6.0.0",
    "django-async-redis==0.2.0",
    "celery==5.5.3",
    "django-celery-beat==2.8.1",
    "django-celery-results==2.6.0",
    "flower==2.0.1",
    "amqp==5.3.1",
    "billiard==4.2.1",
    "kombu==5.5.4",
    "vine==5.1.0",
    # AWS & Storage
    "boto3==1.39.11",
    "botocore==1.39.11",
    "aioboto3==15.1.0",
    "aiobotocore==2.24.0",
    "s3transfer==0.13.0",
    "django-storages==1.14.6",
    # Authentication & Security
    "pyjwt==2.9.0",
    "python3-openid==3.2.0",
    "oauthlib==3.3.1",
    "requests-oauthlib==2.0.0",
    "cryptography==45.0.7",
    "defusedxml==0.7.1",
    # CORS & Filters
    "django-cors-headers==4.7.0",
    "django-filter==25.1",
    # Monitoring & Observability
    "django-health-check==3.20.0",
    "prometheus-client==0.22.1",
    # OpenTelemetry Core
    "opentelemetry-api==1.37.0",
    "opentelemetry-distro[otlp]==0.58b0",
    "opentelemetry-exporter-otlp==1.37.0",
    "opentelemetry-exporter-otlp-proto-common==1.37.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.37.0",
    "opentelemetry-exporter-otlp-proto-http==1.37.0",
    "opentelemetry-instrumentation==0.58b0",
    "opentelemetry-instrumentation-aiohttp-client==0.58b0",
    "opentelemetry-instrumentation-aiohttp-server==0.58b0",
    "opentelemetry-instrumentation-asgi==0.58b0",
    "opentelemetry-instrumentation-asyncio==0.58b0",
    "opentelemetry-instrumentation-boto3sqs==0.58b0",
    "opentelemetry-instrumentation-botocore==0.58b0",
    "opentelemetry-instrumentation-celery==0.58b0",
    "opentelemetry-instrumentation-click==0.58b0",
    "opentelemetry-instrumentation-dbapi==0.58b0",
    "opentelemetry-instrumentation-django==0.58b0",
    "opentelemetry-instrumentation-grpc==0.58b0",
    "opentelemetry-instrumentation-jinja2==0.58b0",
    "opentelemetry-instrumentation-logging==0.58b0",
    "opentelemetry-instrumentation-psycopg==0.58b0",
    "opentelemetry-instrumentation-psycopg2==0.58b0",
    "opentelemetry-instrumentation-redis==0.58b0",
    "opentelemetry-instrumentation-requests==0.58b0",
    "opentelemetry-instrumentation-sqlite3==0.58b0",
    "opentelemetry-instrumentation-threading==0.58b0",
    "opentelemetry-instrumentation-tornado==0.58b0",
    "opentelemetry-instrumentation-urllib==0.58b0",
    "opentelemetry-instrumentation-urllib3==0.58b0",
    "opentelemetry-instrumentation-wsgi==0.58b0",
    "opentelemetry-propagator-aws-xray==1.0.2",
    "opentelemetry-proto==1.37.0",
    "opentelemetry-sdk==1.37.0",
    "opentelemetry-semantic-conventions==0.58b0",
    "opentelemetry-util-http==0.58b0",
    "python-dotenv==1.1.1",
    # Utilities
    "pillow==11.3.0",
    "python-magic==0.4.27",
    "requests==2.32.4",
    "aiofiles==24.1.0",
    "aiohttp==3.12.15",
    "roman-numerals-py==3.1.0",
    "humanize==4.12.3",
    "colorlog==6.9.0",
    "rich==14.1.0",
    "click==8.2.1",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1.2",
    "click-repl==0.3.0",
    "python-crontab==3.3.0",
    "cron-descriptor==1.4.5",
    "django-timezone-field==7.1",
    "python-json-logger==3.3.0",
    # Core Python Libraries
    "certifi==2025.7.14",
    "charset-normalizer==3.4.2",
    "idna==3.10",
    "urllib3==2.5.0",
    "pytz==2025.2",
    "tzdata==2025.2",
    "python-dateutil==2.9.0.post0",
    "six==1.17.0",
    "typing-extensions==4.14.1",
    "pip>=25.2",
    "servestatic>=3.1.0",
    "django-db-connection-pool>=1.2.6",
    "twilio>=9.8.7",
]

# ---------------------------------------
# DEVELOPMENT DEPENDENCY GROUPS - Only installed in dev/test environments
# ---------------------------------------
[dependency-groups]

# Development tools - linters, formatters, type checkers
dev = [
    "black==25.1.0",
    "isort==6.0.1",
    "pylint==3.3.8",
    "pylint-django==2.6.1",
    "bandit==1.8.6",
    "vulture==2.14",
    "django-debug-toolbar==6.0.0",
    "django-extensions==4.1",
    "pip>=25.2",
    "faker>=37.8.0",
    "pytest>=8.4.1",
    "moto>=5.1.12",
    "responses>=0.25.8",
    "daphne>=4.2.1",
    "ruff>=0.15.1",
]

# Testing tools
test = [
    "pytest==8.4.1",
    "pytest-django==4.11.1",
    "faker==37.8.0",
    "moto==5.1.12",
    "django-debug-toolbar==6.0.0",
    "django-extensions==4.1",
    "responses==0.25.8",
    "daphne>=4.2.1",
]

# Documentation generation
docs = [
    "sphinx==8.2.3",
    "sphinx-rtd-theme==3.0.2",
    "graphviz==0.21",
    "pydot==4.0.1",
    "myst-parser>=4.0.1",
]

[tool.pylint.main]
load-plugins = ["pylint_django"]
django-settings-module = "config.settings"
ignore = ["migrations"]
generated-members = ["Meta", "verification", "objects", "url"]

[tool.pylint.messages_control]
disable = [
    "missing-docstring",
    "invalid-name",
    "too-few-public-methods",
    "line-too-long",
    "abstract-method",
    "arguments-renamed",
    "raise-missing-from",
    "arguments-differ",
    "import-outside-toplevel",
    "logging-fstring-interpolation",
    "too-many-ancestors"
]

[tool.pylint.format]
max-line-length = 120

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py", "tests.py"]
addopts = ["--tb=short"]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88
